Fix navbar links to direct to correct sections and collapse the navbar on click

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -2,12 +2,12 @@
   margin-left: auto;
   margin-right: auto;
   width: 70%;
-  margin-top: 70px;
+  margin-top: 56px;
   margin-bottom: 30px;
 }
 
 .section {
-  margin-top: 70px;
+  padding-top: 70px;
 }
 
 p {
@@ -97,7 +97,7 @@ a:hover {
 }
 
 #dora-card {
-  background-color: #EF6950 !important;
+  background-color: lightblue !important;
 }
 
 #au-card {
@@ -108,4 +108,8 @@ a:hover {
 #wacc-card {
   background-color: #2c3e50;
   color: white;
+}
+
+.navbar-light {
+  background-color:#e3f2fd !important;
 }
